Ghaurins Hold: encounter adjustments for higher levels

--- a/mod/area/darkness001.git.yml
+++ b/mod/area/darkness001.git.yml
@@ -160,21 +160,9 @@ Encounter List:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
-        Appearance: {type: :int, value: 186}
-        CR: {type: :float, value: 3.0}
-        Comment: {type: :cexostr, value: ""}
-        ResRef: {type: :resref, value: allip}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 70}
-        CR: {type: :float, value: 3.0}
-        ResRef: {type: :resref, value: erf_skelettkrieg}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
         Appearance: {type: :int, value: 187}
         CR: {type: :float, value: 5.0}
+        Comment: {type: :cexostr, value: ""}
         ResRef: {type: :resref, value: todesalb}
         SingleSpawn: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
@@ -182,6 +170,18 @@ Encounter List:
         Appearance: {type: :int, value: 195}
         CR: {type: :float, value: 5.0}
         ResRef: {type: :resref, value: zombie}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 70}
+        CR: {type: :float, value: 6.0}
+        ResRef: {type: :resref, value: nw_skelwarr01}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 182}
+        CR: {type: :float, value: 7.0}
+        ResRef: {type: :resref, value: nw_skelchief}
         SingleSpawn: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
@@ -271,18 +271,6 @@ Encounter List:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
-        Appearance: {type: :int, value: 186}
-        CR: {type: :float, value: 3.0}
-        ResRef: {type: :resref, value: allip}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 70}
-        CR: {type: :float, value: 3.0}
-        ResRef: {type: :resref, value: erf_skelettkrieg}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
         Appearance: {type: :int, value: 187}
         CR: {type: :float, value: 5.0}
         ResRef: {type: :resref, value: todesalb}
@@ -331,12 +319,12 @@ Encounter List:
         __struct_id: 1
         X: {type: :float, value: 0.0}
         Y: {type: :float, value: 0.0}
-        Z: {type: :float, value: 0.425}
+        Z: {type: :float, value: -5.575}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 1
         X: {type: :float, value: -3.0996}
         Y: {type: :float, value: 0.0253}
-        Z: {type: :float, value: 0.425}
+        Z: {type: :float, value: -5.575}
     LocalizedName: 
       type: :cexolocstr
       value: 
@@ -359,15 +347,15 @@ Encounter List:
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 2
         Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 19.8856}
-        Y: {type: :float, value: 53.3}
-        Z: {type: :float, value: 0.0456}
+        X: {type: :float, value: 80.7666}
+        Y: {type: :float, value: 56.4414}
+        Z: {type: :float, value: 0.3066}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 2
         Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 19.337}
-        Y: {type: :float, value: 31.5112}
-        Z: {type: :float, value: 0.0696}
+        X: {type: :float, value: 80.0753}
+        Y: {type: :float, value: 24.8819}
+        Z: {type: :float, value: 0.0301}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 2
         Orientation: {type: :float, value: -0.0}
@@ -377,13 +365,13 @@ Encounter List:
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 2
         Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 80.4776}
-        Y: {type: :float, value: 45.0925}
-        Z: {type: :float, value: 0.1815}
+        X: {type: :float, value: 19.6838}
+        Y: {type: :float, value: 44.6544}
+        Z: {type: :float, value: 0.1265}
     Tag: {type: :cexostr, value: Untote_unmoeglich}
     TemplateResRef: {type: :resref, value: untote_unmoglich}
-    XPosition: {type: :float, value: 61.5175}
-    YPosition: {type: :float, value: 71.9139}
+    XPosition: {type: :float, value: 61.6041}
+    YPosition: {type: :float, value: 72.218}
     ZPosition: {type: :float, value: 0.0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 7
@@ -391,18 +379,6 @@ Encounter List:
     CreatureList: 
       type: :list
       value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 186}
-        CR: {type: :float, value: 3.0}
-        ResRef: {type: :resref, value: allip}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 70}
-        CR: {type: :float, value: 3.0}
-        ResRef: {type: :resref, value: erf_skelettkrieg}
-        SingleSpawn: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
         Appearance: {type: :int, value: 187}
