--- a/mod/area/darkness002.git.yml
+++ b/mod/area/darkness002.git.yml
@@ -158,17 +158,10 @@ Encounter List:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
-        Appearance: {type: :int, value: 186}
-        CR: {type: :float, value: 3.0}
+        Appearance: {type: :int, value: 58}
+        CR: {type: :float, value: 5.0}
         Comment: {type: :cexostr, value: ""}
-        ResRef: {type: :resref, value: allip}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 70}
-        CR: {type: :float, value: 3.0}
-        Comment: {type: :cexostr, value: ""}
-        ResRef: {type: :resref, value: erf_skelettkrieg}
+        ResRef: {type: :resref, value: mummie}
         SingleSpawn: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
@@ -188,6 +181,7 @@ Encounter List:
         __struct_id: 0
         Appearance: {type: :int, value: 23}
         CR: {type: :float, value: 8.0}
+        Comment: {type: :cexostr, value: ""}
         ResRef: {type: :resref, value: bodak}
         SingleSpawn: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
@@ -195,6 +189,12 @@ Encounter List:
         Appearance: {type: :int, value: 147}
         CR: {type: :float, value: 8.0}
         ResRef: {type: :resref, value: grssererschatten}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 71}
+        CR: {type: :float, value: 8.0}
+        ResRef: {type: :resref, value: skelett_krieger2}
         SingleSpawn: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
@@ -416,9 +416,9 @@ Encounter List:
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 2
         Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 10.514}
-        Y: {type: :float, value: 70.6239}
-        Z: {type: :float, value: 0.0037}
+        X: {type: :float, value: 25.3497}
+        Y: {type: :float, value: 64.5709}
+        Z: {type: :float, value: -0.0}
     Tag: {type: :cexostr, value: Untote_mittel}
     TemplateResRef: {type: :resref, value: untote_mittel}
     XPosition: {type: :float, value: 54.3461}
@@ -438,12 +438,6 @@ Encounter List:
         SingleSpawn: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
-        Appearance: {type: :int, value: 172}
-        CR: {type: :float, value: 3.0}
-        ResRef: {type: :resref, value: gruftschrecken}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
         Appearance: {type: :int, value: 146}
         CR: {type: :float, value: 3.0}
         ResRef: {type: :resref, value: schatten}
@@ -459,6 +453,18 @@ Encounter List:
         Appearance: {type: :int, value: 187}
         CR: {type: :float, value: 5.0}
         ResRef: {type: :resref, value: todesalb}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 71}
+        CR: {type: :float, value: 8.0}
+        ResRef: {type: :resref, value: skelett_krieger2}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 199}
+        CR: {type: :float, value: 10.0}
+        ResRef: {type: :resref, value: zombie3}
         SingleSpawn: {type: :byte, value: 0}
     Difficulty: {type: :int, value: 0}
     DifficultyIndex: {type: :int, value: 2}
@@ -502,7 +508,7 @@ Encounter List:
     OnHeartbeat: {type: :resref, value: ""}
     OnUserDefined: {type: :resref, value: ""}
     PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 4}
+    RecCreatures: {type: :int, value: 7}
     Reset: {type: :byte, value: 1}
     ResetTime: {type: :int, value: 3600}
     Respawns: {type: :int, value: -1}
@@ -529,18 +535,6 @@ Encounter List:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
-        Appearance: {type: :int, value: 172}
-        CR: {type: :float, value: 3.0}
-        ResRef: {type: :resref, value: gruftschrecken}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 146}
-        CR: {type: :float, value: 3.0}
-        ResRef: {type: :resref, value: schatten}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
         Appearance: {type: :int, value: 58}
         CR: {type: :float, value: 5.0}
         ResRef: {type: :resref, value: mummie}
@@ -553,9 +547,27 @@ Encounter List:
         SingleSpawn: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
+        Appearance: {type: :int, value: 23}
+        CR: {type: :float, value: 8.0}
+        ResRef: {type: :resref, value: bodak}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
         Appearance: {type: :int, value: 147}
         CR: {type: :float, value: 8.0}
         ResRef: {type: :resref, value: grssererschatten}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 71}
+        CR: {type: :float, value: 8.0}
+        ResRef: {type: :resref, value: skelett_krieger2}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 199}
+        CR: {type: :float, value: 10.0}
+        ResRef: {type: :resref, value: zombie3}
         SingleSpawn: {type: :byte, value: 0}
     Difficulty: {type: :int, value: 0}
     DifficultyIndex: {type: :int, value: 2}
@@ -637,18 +649,6 @@ Encounter List:
     CreatureList: 
       type: :list
       value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 186}
-        CR: {type: :float, value: 3.0}
-        ResRef: {type: :resref, value: allip}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 70}
-        CR: {type: :float, value: 3.0}
-        ResRef: {type: :resref, value: erf_skelettkrieg}
-        SingleSpawn: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
         Appearance: {type: :int, value: 187}
