--- a/mod/area/darkness003.git.yml
+++ b/mod/area/darkness003.git.yml
@@ -97,20 +97,6 @@ Encounter List:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
-        Appearance: {type: :int, value: 186}
-        CR: {type: :float, value: 3.0}
-        Comment: {type: :cexostr, value: ""}
-        ResRef: {type: :resref, value: nw_allip}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 146}
-        CR: {type: :float, value: 3.0}
-        Comment: {type: :cexostr, value: ""}
-        ResRef: {type: :resref, value: nw_shadow}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
         Appearance: {type: :int, value: 187}
         CR: {type: :float, value: 5.0}
         Comment: {type: :cexostr, value: ""}
@@ -120,13 +106,27 @@ Encounter List:
         __struct_id: 0
         Appearance: {type: :int, value: 156}
         CR: {type: :float, value: 6.0}
+        Comment: {type: :cexostr, value: ""}
         ResRef: {type: :resref, value: nw_spectre}
         SingleSpawn: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
         Appearance: {type: :int, value: 147}
         CR: {type: :float, value: 7.0}
+        Comment: {type: :cexostr, value: ""}
         ResRef: {type: :resref, value: nw_shfiend}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 147}
+        CR: {type: :float, value: 8.0}
+        ResRef: {type: :resref, value: grssererschatten}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 124}
+        CR: {type: :float, value: 10.0}
+        ResRef: {type: :resref, value: nw_mumcleric}
         SingleSpawn: {type: :byte, value: 0}
     Difficulty: {type: :int, value: 0}
     DifficultyIndex: {type: :int, value: 2}
@@ -166,7 +166,7 @@ Encounter List:
     OnHeartbeat: {type: :resref, value: ""}
     OnUserDefined: {type: :resref, value: ""}
     PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 5}
+    RecCreatures: {type: :int, value: 8}
     Reset: {type: :byte, value: 1}
     ResetTime: {type: :int, value: 60}
     Respawns: {type: :int, value: -1}
@@ -265,15 +265,20 @@ Encounter List:
     OnHeartbeat: {type: :resref, value: ""}
     OnUserDefined: {type: :resref, value: ""}
     PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 5}
+    RecCreatures: {type: :int, value: 8}
     Reset: {type: :byte, value: 1}
     ResetTime: {type: :int, value: 60}
     Respawns: {type: :int, value: -1}
     SpawnOption: {type: :int, value: 0}
     SpawnPointList: 
       type: :list
-      value: []
-
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 40.0139}
+        Y: {type: :float, value: 11.1345}
+        Z: {type: :float, value: -0.0}
     Tag: {type: :cexostr, value: NW_INCORPORGRP}
     TemplateResRef: {type: :resref, value: nw_incorporgrp}
     XPosition: {type: :float, value: 42.5642}
@@ -285,18 +290,6 @@ Encounter List:
     CreatureList: 
       type: :list
       value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 186}
-        CR: {type: :float, value: 3.0}
-        ResRef: {type: :resref, value: nw_allip}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 146}
-        CR: {type: :float, value: 3.0}
-        ResRef: {type: :resref, value: nw_shadow}
-        SingleSpawn: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
         Appearance: {type: :int, value: 187}
@@ -314,6 +307,18 @@ Encounter List:
         Appearance: {type: :int, value: 147}
         CR: {type: :float, value: 7.0}
         ResRef: {type: :resref, value: nw_shfiend}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 196}
+        CR: {type: :float, value: 8.0}
+        ResRef: {type: :resref, value: nw_zombieboss}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 124}
+        CR: {type: :float, value: 10.0}
+        ResRef: {type: :resref, value: nw_mumcleric}
         SingleSpawn: {type: :byte, value: 0}
     Difficulty: {type: :int, value: 0}
     DifficultyIndex: {type: :int, value: 2}
@@ -353,7 +358,7 @@ Encounter List:
     OnHeartbeat: {type: :resref, value: ""}
     OnUserDefined: {type: :resref, value: ""}
     PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 5}
+    RecCreatures: {type: :int, value: 8}
     Reset: {type: :byte, value: 1}
     ResetTime: {type: :int, value: 60}
     Respawns: {type: :int, value: -1}
@@ -364,14 +369,14 @@ Encounter List:
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 2
         Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 30.1048}
-        Y: {type: :float, value: 36.562}
-        Z: {type: :float, value: 0.0}
+        X: {type: :float, value: 32.32}
+        Y: {type: :float, value: 36.7936}
+        Z: {type: :float, value: -0.0}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 2
         Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 29.5795}
-        Y: {type: :float, value: 30.3764}
+        X: {type: :float, value: 26.6274}
+        Y: {type: :float, value: 36.6859}
         Z: {type: :float, value: -0.0}
     Tag: {type: :cexostr, value: NW_INCORPORGRP}
     TemplateResRef: {type: :resref, value: nw_incorporgrp}
@@ -386,24 +391,6 @@ Encounter List:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
-        Appearance: {type: :int, value: 186}
-        CR: {type: :float, value: 3.0}
-        ResRef: {type: :resref, value: nw_allip}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 146}
-        CR: {type: :float, value: 3.0}
-        ResRef: {type: :resref, value: nw_shadow}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 187}
-        CR: {type: :float, value: 5.0}
-        ResRef: {type: :resref, value: nw_wraith}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
         Appearance: {type: :int, value: 156}
         CR: {type: :float, value: 6.0}
         ResRef: {type: :resref, value: nw_spectre}
@@ -413,6 +400,24 @@ Encounter List:
         Appearance: {type: :int, value: 147}
         CR: {type: :float, value: 7.0}
         ResRef: {type: :resref, value: nw_shfiend}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 23}
+        CR: {type: :float, value: 9.0}
+        ResRef: {type: :resref, value: nw_bodak}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 124}
+        CR: {type: :float, value: 10.0}
+        ResRef: {type: :resref, value: nw_mumcleric}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 40}
+        CR: {type: :float, value: 10.0}
+        ResRef: {type: :resref, value: nw_doomkght}
         SingleSpawn: {type: :byte, value: 0}
     Difficulty: {type: :int, value: 0}
     DifficultyIndex: {type: :int, value: 2}
@@ -452,7 +457,7 @@ Encounter List:
     OnHeartbeat: {type: :resref, value: ""}
     OnUserDefined: {type: :resref, value: ""}
     PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 5}
+    RecCreatures: {type: :int, value: 8}
     Reset: {type: :byte, value: 1}
     ResetTime: {type: :int, value: 60}
     Respawns: {type: :int, value: -1}
@@ -545,7 +550,7 @@ Encounter List:
     OnHeartbeat: {type: :resref, value: ""}
     OnUserDefined: {type: :resref, value: ""}
     PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 5}
+    RecCreatures: {type: :int, value: 8}
     Reset: {type: :byte, value: 1}
     ResetTime: {type: :int, value: 60}
     Respawns: {type: :int, value: -1}
