Fardrimm: fix ATs

--- a/mod/area/dr_ost01.git.yml
+++ b/mod/area/dr_ost01.git.yml
@@ -26,7 +26,7 @@ Door List:
     AnimationState: {type: :byte, value: 1}
     Appearance: {type: :dword, value: 61}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 80}
@@ -785,7 +785,7 @@ TriggerList:
         PointZ: {type: :float, value: 0.025000000372529}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: druldan_drost01}
+    LinkedTo: {type: :cexostr, value: WP_druldan_drost01}
     LinkedToFlags: {type: :byte, value: 2}
     LoadScreenID: {type: :word, value: 0}
     LocalizedName: 
@@ -830,18 +830,17 @@ WaypointList:
     LinkedTo: {type: :cexostr, value: ""}
     LocalizedName: 
       type: :cexolocstr
-      str_ref: 14817
-      value: 
-        0: wp_drost01_druldan
+      value: {}
+
     MapNote: 
       type: :cexolocstr
       value: {}
 
-    MapNoteEnabled: {type: :byte, value: 1}
-    Tag: {type: :cexostr, value: wp_drost01_druldan}
-    TemplateResRef: {type: :resref, value: nw_waypoint001}
-    XOrientation: {type: :float, value: 0.9988}
-    XPosition: {type: :float, value: 1.5624}
-    YOrientation: {type: :float, value: -0.0491}
-    YPosition: {type: :float, value: 29.3927}
+    MapNoteEnabled: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: WP_drost01_druldan}
+    TemplateResRef: {type: :resref, value: ""}
+    XOrientation: {type: :float, value: 1.0}
+    XPosition: {type: :float, value: 3.3982}
+    YOrientation: {type: :float, value: 0.0}
+    YPosition: {type: :float, value: 29.935}
     ZPosition: {type: :float, value: -0.0}
