--- a/mod/area/dr_uldan.git.yml
+++ b/mod/area/dr_uldan.git.yml
@@ -1143,7 +1143,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 70}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -1209,7 +1209,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 70}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -1444,7 +1444,7 @@ TriggerList:
         PointZ: {type: :float, value: 0.025000000372529}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: wp_drost01_druldan}
+    LinkedTo: {type: :cexostr, value: WP_drost01_druldan}
     LinkedToFlags: {type: :byte, value: 2}
     LoadScreenID: {type: :word, value: 0}
     LocalizedName: 
@@ -1646,32 +1646,6 @@ WaypointList:
       type: :cexolocstr
       str_ref: 14817
       value: 
-        0: wp_druldan_drost01
-    MapNote: 
-      type: :cexolocstr
-      value: {}
-
-    MapNoteEnabled: {type: :byte, value: 1}
-    Tag: {type: :cexostr, value: wp_druldan_drost01}
-    TemplateResRef: {type: :resref, value: nw_waypoint001}
-    XOrientation: {type: :float, value: -0.9997}
-    XPosition: {type: :float, value: 99.0284}
-    YOrientation: {type: :float, value: -0.0245}
-    YPosition: {type: :float, value: 59.8663}
-    ZPosition: {type: :float, value: 0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 5
-    Appearance: {type: :byte, value: 1}
-    Description: 
-      type: :cexolocstr
-      value: {}
-
-    HasMapNote: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: ""}
-    LocalizedName: 
-      type: :cexolocstr
-      str_ref: 14817
-      value: 
         0: wp_druldan_drsued01
     MapNote: 
       type: :cexolocstr
@@ -1710,4 +1684,29 @@ WaypointList:
     XPosition: {type: :float, value: 0.8233}
     YOrientation: {type: :float, value: 0.0245}
     YPosition: {type: :float, value: 39.3883}
+    ZPosition: {type: :float, value: -0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 5
+    Appearance: {type: :byte, value: 1}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    HasMapNote: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: ""}
+    LocalizedName: 
+      type: :cexolocstr
+      value: {}
+
+    MapNote: 
+      type: :cexolocstr
+      value: {}
+
+    MapNoteEnabled: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: WP_druldan_drost01}
+    TemplateResRef: {type: :resref, value: ""}
+    XOrientation: {type: :float, value: -1.0}
+    XPosition: {type: :float, value: 97.3955}
+    YOrientation: {type: :float, value: 0.0}
+    YPosition: {type: :float, value: 59.9888}
     ZPosition: {type: :float, value: -0.0}
