--- a/mod/area/ktunnel104.git.yml
+++ b/mod/area/ktunnel104.git.yml
@@ -646,7 +646,7 @@ TriggerList:
         PointZ: {type: :float, value: 8.56928730010986}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: WP_wiztwr_ktunnel104}
+    LinkedTo: {type: :cexostr, value: WP_wildnis_nord_wiz_2_deep_kobol}
     LinkedToFlags: {type: :byte, value: 2}
     LoadScreenID: {type: :word, value: 0}
     LocalizedName: 
@@ -778,18 +778,17 @@ WaypointList:
     LinkedTo: {type: :cexostr, value: ""}
     LocalizedName: 
       type: :cexolocstr
-      str_ref: 14817
-      value: 
-        0: WP_ktunnel104_wiztwr
+      value: {}
+
     MapNote: 
       type: :cexolocstr
       value: {}
 
-    MapNoteEnabled: {type: :byte, value: 1}
+    MapNoteEnabled: {type: :byte, value: 0}
     Tag: {type: :cexostr, value: WP_ktunnel104_wiztwr}
-    TemplateResRef: {type: :resref, value: nw_waypoint001}
-    XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 75.122}
+    TemplateResRef: {type: :resref, value: ""}
+    XOrientation: {type: :float, value: -0.0}
+    XPosition: {type: :float, value: 74.9665}
     YOrientation: {type: :float, value: -1.0}
-    YPosition: {type: :float, value: 73.325}
-    ZPosition: {type: :float, value: 8.3378}
+    YPosition: {type: :float, value: 71.799}
+    ZPosition: {type: :float, value: 7.8068}
