--- a/mod/area/wildnis_nord_wzu.git.yml
+++ b/mod/area/wildnis_nord_wzu.git.yml
@@ -171,8 +171,8 @@ TriggerList:
         PointZ: {type: :float, value: 0.424714267253876}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: ""}
-    LinkedToFlags: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: WP_ktunnel104_wiztwr}
+    LinkedToFlags: {type: :byte, value: 2}
     LoadScreenID: {type: :word, value: 0}
     LocalizedName: 
       type: :cexolocstr
@@ -316,4 +316,29 @@ WaypointList:
     XPosition: {type: :float, value: 22.3793}
     YOrientation: {type: :float, value: 1.0}
     YPosition: {type: :float, value: 17.3606}
+    ZPosition: {type: :float, value: -0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 5
+    Appearance: {type: :byte, value: 1}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    HasMapNote: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: ""}
+    LocalizedName: 
+      type: :cexolocstr
+      value: {}
+
+    MapNote: 
+      type: :cexolocstr
+      value: {}
+
+    MapNoteEnabled: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: WP_wildnis_nord_wiz_2_deep_kobold}
+    TemplateResRef: {type: :resref, value: ""}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 24.5026}
+    YOrientation: {type: :float, value: -1.0}
+    YPosition: {type: :float, value: 30.5297}
     ZPosition: {type: :float, value: -0.0}
