--- a/mod/area/ktunnel102.git.yml
+++ b/mod/area/ktunnel102.git.yml
@@ -608,7 +608,7 @@ TriggerList:
         PointZ: {type: :float, value: 8.36378192901611}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: WP_triade_ktunnel102}
+    LinkedTo: {type: :cexostr, value: WP_nord_triade_ruin_2_deeproads}
     LinkedToFlags: {type: :byte, value: 2}
     LoadScreenID: {type: :word, value: 0}
     LocalizedName: 
@@ -742,32 +742,6 @@ WaypointList:
       type: :cexolocstr
       str_ref: 14817
       value: 
-        0: WP_ktunnel102_triade
-    MapNote: 
-      type: :cexolocstr
-      value: {}
-
-    MapNoteEnabled: {type: :byte, value: 1}
-    Tag: {type: :cexostr, value: WP_ktunnel102_triade}
-    TemplateResRef: {type: :resref, value: nw_waypoint001}
-    XOrientation: {type: :float, value: 0.0736}
-    XPosition: {type: :float, value: 44.9298}
-    YOrientation: {type: :float, value: -0.9973}
-    YPosition: {type: :float, value: 61.211}
-    ZPosition: {type: :float, value: 7.6192}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 5
-    Appearance: {type: :byte, value: 1}
-    Description: 
-      type: :cexolocstr
-      value: {}
-
-    HasMapNote: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: ""}
-    LocalizedName: 
-      type: :cexolocstr
-      str_ref: 14817
-      value: 
         0: WP_ktunnel102_ktunnel103
     MapNote: 
       type: :cexolocstr
@@ -781,3 +755,28 @@ WaypointList:
     YOrientation: {type: :float, value: -1.0}
     YPosition: {type: :float, value: 98.7525}
     ZPosition: {type: :float, value: 5.5}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 5
+    Appearance: {type: :byte, value: 1}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    HasMapNote: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: ""}
+    LocalizedName: 
+      type: :cexolocstr
+      value: {}
+
+    MapNote: 
+      type: :cexolocstr
+      value: {}
+
+    MapNoteEnabled: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: WP_ktunnel102_triade}
+    TemplateResRef: {type: :resref, value: ""}
+    XOrientation: {type: :float, value: -0.0}
+    XPosition: {type: :float, value: 44.9759}
+    YOrientation: {type: :float, value: -1.0}
+    YPosition: {type: :float, value: 61.3979}
+    ZPosition: {type: :float, value: 7.78}
