--- a/mod/area/nord_triade_ug.git.yml
+++ b/mod/area/nord_triade_ug.git.yml
@@ -511,7 +511,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 71}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -1891,14 +1891,14 @@ TriggerList:
         PointZ: {type: :float, value: 0.369660794734955}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: ""}
-    LinkedToFlags: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: WP_ktunnel102_triade}
+    LinkedToFlags: {type: :byte, value: 2}
     LoadScreenID: {type: :word, value: 0}
     LocalizedName: 
       type: :cexolocstr
       str_ref: 14760
-      value: {}
-
+      value: 
+        0: "Neuer Gebiets\xFCbergang"
     OnClick: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
@@ -1950,3 +1950,28 @@ WaypointList:
     YOrientation: {type: :float, value: 0.9239}
     YPosition: {type: :float, value: 16.5163}
     ZPosition: {type: :float, value: 0.0789}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 5
+    Appearance: {type: :byte, value: 1}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    HasMapNote: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: ""}
+    LocalizedName: 
+      type: :cexolocstr
+      value: {}
+
+    MapNote: 
+      type: :cexolocstr
+      value: {}
+
+    MapNoteEnabled: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: WP_nord_triade_ruin_2_deeproads}
+    TemplateResRef: {type: :resref, value: ""}
+    XOrientation: {type: :float, value: -0.0}
+    XPosition: {type: :float, value: 34.5749}
+    YOrientation: {type: :float, value: -1.0}
+    YPosition: {type: :float, value: 30.8699}
+    ZPosition: {type: :float, value: -0.0}
